--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
+FRONTEND_DOMAIN=
+
 NODE_ENV=
 DATABASE_URL=
 PORT=
 JWT_SECRET=
+JWT_EXPIRES_IN=
+
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=
