--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "argon2": "^0.44.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
